# Betriebssysteme_und_Systemprogrammierung

./: .gitignore
Abgabe/: Lösungen_BSS_Prak_2.docx
Abgabe/Abgabe_02/: Author.txt  CMakeLists.txt  Lösungen_BSS_Prak_2.docx
Abgabe/Abgabe_02/include/: CubeBlock.h  Field.h  PyramidBlock.h  World.h
Abgabe/Abgabe_02/src/: CubeBlock.cpp  World.cpp
Abgabe/Aufgabe_01/: Lösungen_Praktikum_1.docx  ~$sungen_Praktikum_1.docx  ~WRL0641.tmp
Abgabe/Aufgabe_01/include/: Book.h  Shelf.h
Abgabe/Aufgabe_01/src/: Book.cpp  Library.cpp  Visitor.cpp  main.cpp
Abgabe/Praktiku_Aufgabe02_Vorlage/: Authors.txt  CPPLINT.cfg  Makefile  common.mk  main.cc  types.h
Abgabe/Praktiku_Aufgabe02_Vorlage/.build/: main.d  system  system64
Abgabe/Praktiku_Aufgabe02_Vorlage/boot/: interrupts.asm  longmode.asm  startup.asm  startup.cc  startup_ap.asm
Abgabe/Praktiku_Aufgabe02_Vorlage/compiler/: crti.asm  crtn.asm  fix.h  sections.ld
Abgabe/Praktiku_Aufgabe02_Vorlage/debug/: assert.cc  assert.h  kernelpanic.h  null_stream.h  output.h
Abgabe/Praktiku_Aufgabe02_Vorlage/machine/: acpi.h  (+17 more)
Aufgabe_01/: CMakeLists.txt
Aufgabe_01/include/: Book.h  Visitor.h
Aufgabe_01/src/: Book.cpp  Library.cpp  Visitor.cpp
Betriebssysteme/Abgabe/: main.cpp
Betriebssysteme/Fabian/: BS_A1.docx  main.c  main.cpp  ~$BS_A1.docx
Betriebssysteme/Konstantin/: Lösung_Betriebssysteme_Blatt1.docx  main.cpp
Fabian/Aufgabe_01/: Aufgabe_01.txt
Fabian/Aufgabe_02/: Aufgabe_02.txt
Konstantin/Aufgabe_02/: Lösungen_BSS_Prak_2.docx  main.cpp  ~$sungen_BSS_Prak_2.docx  ~WRL0133.tmp
Textabgabe_01/: Aufgabe_01.txt
(+103 files in other folders)
